--- a/scripts/build
+++ b/scripts/build
@@ -1,6 +1,4 @@
 #!/usr/bin/env bash
-rm -rf build/
-rm -rf dist/
-rm -rf pybman.egg-info/
 source env/bin/activate
-python3 setup.py sdist bdist_wheel 
+python3 setup.py sdist bdist_wheel
+deactivate
