--- a/scripts/build
+++ b/scripts/build
@@ -1,4 +1,7 @@
 #!/usr/bin/env bash
+rm -rf build/
+rm -rf dist/
+rm -rf *.egg-info/
 source env/bin/activate
-python3 setup.py sdist bdist_wheel
+python setup.py sdist bdist_wheel 
 deactivate
