--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-certifi==2020.12.5
+certifi==2021.10.8
 chardet==4.0.0
-idna==2.10
-lxml==4.6.3
-requests==2.25.1
-tqdm==4.60.0
-urllib3==1.26.5
+charset-normalizer==2.0.11
+idna==3.3
+lxml==4.7.1
+requests==2.27.1
+tqdm==4.62.3
+urllib3==1.26.8
